--- a/GameShop/GameShop/Views/Games/Details.cshtml
+++ b/GameShop/GameShop/Views/Games/Details.cshtml
@@ -8,39 +8,63 @@
 
 <div>
     <hr />
+    <div class="row">
+        <div class="col-md-2">
+            <div style="width: 180px; height:180px;background-color: grey;">картинка</div>
+        </div>
+
+        <div class="col-md-7">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.Label("Название игры:")
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Category.Name)
+                </dd>
+
+                <dt>
+                    @Html.Label("Категория:")
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+
+                <dt>
+                    @Html.Label("Дата выхода:")
+                </dt>
+
+                <dd>
+
+                </dd>
+
+                <dt>
+                    @Html.Label("Цена:")
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Price)
+                </dd>
+            </dl>
+        </div>
+    </div>
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Category.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.Label("Описание:")
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
 
+        <dt>
+            @Html.Label("Системные требования:")
+        </dt>
+
+        <dd>
+
+        </dd>
     </dl>
 </div>
 <p>
