Add game poster

--- a/GameShop/GameShop/Views/Games/Details.cshtml
+++ b/GameShop/GameShop/Views/Games/Details.cshtml
@@ -10,7 +10,7 @@
     <hr />
     <div class="row">
         <div class="col-md-2">
-            <div style="width: 180px; height:180px;background-color: grey;">картинка</div>
+            <img src="@Model.GamePosterUrl" style="width:180px; height:180px" alt="kartinka" />
         </div>
 
         <div class="col-md-7">
