--- a/GameShop/GameShop/Views/Account/Profile.cshtml
+++ b/GameShop/GameShop/Views/Account/Profile.cshtml
@@ -72,7 +72,7 @@
             </th>
             
         </tr>
-            @foreach (var purchasedGame in Model.PurchasedGames)
+            @foreach (var purchasedGame in Model.PurchasedGames.OrderByDescending(p => p.Time))
             {
                 <tr>
                     <td>
