--- a/GameShop/GameShop/Views/Customers/Details.cshtml
+++ b/GameShop/GameShop/Views/Customers/Details.cshtml
@@ -61,3 +61,35 @@
     @Html.ActionLink("Редактировать", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Вернуться к списку", "Index")
 </p>
+<br />
+<h4>Купленные игры:</h4>
+<table class="table">
+    <tr>
+        <th>
+            <b>Игра</b>
+        </th>
+        <th>
+            <b>Ключ</b>
+        </th>
+        <th>
+            <b>Цена</b>
+        </th>
+        <th>
+            <b>Дата и время покупки</b>
+        </th>
+
+    </tr>
+    @foreach (var purchasedGame in Model.PurchasedGames.OrderByDescending(p => p.Time))
+            {
+        <tr>
+            <td>
+                @Html.ActionLink(@purchasedGame.Name, "Details", "Games", new { id = purchasedGame.GameId }, null)
+            </td>
+            <td>@purchasedGame.Key</td>
+            <td>
+                @purchasedGame.Price  &#8381
+            </td>
+            <td>@purchasedGame.Time</td>
+        </tr>
+    }
+</table>
