--- a/GameShop/GameShop/Views/Admin/SalesByDate.cshtml
+++ b/GameShop/GameShop/Views/Admin/SalesByDate.cshtml
@@ -26,5 +26,5 @@
 </table>
 <div>
     Страница @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) из @Model.PageCount
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+    @Html.PagedListPager(Model, page => Url.Action("SalesByDate", new { page }))
 </div>
