--- a/GameShop/GameShop/Views/Admin/Index.cshtml
+++ b/GameShop/GameShop/Views/Admin/Index.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "Панель администратора";
+    ViewBag.Title = "Последние продажи";
 }
 <table class="table">
     <caption style="text-align: left"><h2>Последние продажи</h2></caption>
