--- a/GameShop/GameShop/Views/Admin/SalesByDate.cshtml
+++ b/GameShop/GameShop/Views/Admin/SalesByDate.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "Панель администратора";
+    ViewBag.Title = "Продажи по датам";
 }
 <table class="table">
     <caption style="text-align: left"><h2>Продажи по датам</h2></caption>
